# carbon-alert

./: Cargo.toml  Dockerfile  README.md  config.ron.example
src/: main.rs
src/snapshots/: carbon_alert__test__error.snap  carbon_alert__test__timestamp.snap
