[package]
name = "carbon-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
rumqttc = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.25"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
env_logger = "0.9.0"
serde_json = "1.0.72"
serde_repr = "0.1.7"
chrono = { version = "0.4.19", features = ["serde"] }
serde_path_to_error = "0.1.5"
egg-mode = "0.16.0"
ron = "0.7.0"
# There's a type incompatibility between rumqttc and the 0.22 version.
webpki-roots-rumqttc = { version = "0.21", package = "webpki-roots" }

[dev-dependencies]
insta = "1.8.0"
